--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout:   default
-title:    "Learning blog"
+title:    "Arnu Pretorius - blog"
 ---
 
 <section class="section--first section--frontpage">
